Add spaces between publication entries

--- a/quarto-CV/quarto-CV.qmd
+++ b/quarto-CV/quarto-CV.qmd
@@ -217,20 +217,36 @@ tibble::tribble(
 
 # Publications
 
-**Gould, E.**, Fraser, H., Parker, T., Nakagawa, S., Griffith, S., Vesk, P., Fidler, F., et al. (2024). Same data, different analysts: Variation in effect sizes due to analytical decisions in ecology and evolutionary biology [Preprint, Accepted for publication at BMC Biology]. Ecology and Evolutionary Biology. [doi.org/10.32942/X2GG62](https://doi.org/10.32942/X2GG62) <br>
+**Gould, E.**, Fraser, H., Parker, T., Nakagawa, S., Griffith, S., Vesk, P., Fidler, F., et al. (2024). Same data, different analysts: Variation in effect sizes due to analytical decisions in ecology and evolutionary biology [Preprint, Accepted for publication at BMC Biology]. Ecology and Evolutionary Biology. [doi.org/10.32942/X2GG62](https://doi.org/10.32942/X2GG62)
 
-Good, M. K., Rumpff, L., Fraser, H., **Gould, E.**, Jones, C. S., Prober, S. M., Bourne, M., Butt, N., Byrne, M., Duncan, D. H., Gorrod, E., Gosper, C. R., Jordan, R., McIntyre, S., Moore, J. L., Nerenberg, S., Pulsford, S., Richards, A. E., Rogers, D. J., … Vesk, P. A. (2024). A structured approach for building multi‐community State and Transition Models to support conservation planning. Journal of Applied Ecology, 61(9), 2294–2307. [doi.org/10.1111/1365-2664.14718](https://doi.org/10.1111/1365-2664.14718) <br>
+\vspace{2mm}
+
+Good, M. K., Rumpff, L., Fraser, H., **Gould, E.**, Jones, C. S., Prober, S. M., Bourne, M., Butt, N., Byrne, M., Duncan, D. H., Gorrod, E., Gosper, C. R., Jordan, R., McIntyre, S., Moore, J. L., Nerenberg, S., Pulsford, S., Richards, A. E., Rogers, D. J., … Vesk, P. A. (2024). A structured approach for building multi‐community State and Transition Models to support conservation planning. Journal of Applied Ecology, 61(9), 2294–2307. [doi.org/10.1111/1365-2664.14718](https://doi.org/10.1111/1365-2664.14718) 
+
+\vspace{2mm}
 
 Nakagawa, S., Ivimey-Cook, E. R., Grainger, M. J., O’Dea, R. E., Burke, S., Drobniak, S. M., **Gould, E.**, Macartney, E. L., Martinig, A. R., Morrison, K., Paquet, M., Pick, J. L., Pottier, P., Ricolfi, L., Wilkinson, D. P., Willcox, A., Williams, C., Wilson, L. A. B., Windecker, S. M., … Lagisz, M. (2023). Method Reporting with Initials for Transparency (MeRIT) promotes more granularity and accountability for author contributions. Nature Communications, 14(1), 1788. [doi.org/10.1038/s41467-023-37039-1](https://doi.org/10.1038/s41467-023-37039-1)
 
-Ivimey, E. R., Pick, J. L., Bairos, K. R., Culina, A., **Gould, E.**, Grainger, M., Marshall, B. M., Moreau, D., Paquet, M., Royauté, R., Sánchez, A., Silva, I., & Windecker, S. M. (2023). Implementing code review in the scientific workflow: Insights from ecology and evolutionary biology. Journal of Evolutionary Biology. [doi.org/10.1111/jeb.14230](https://doi.org/10.1111/jeb.14230) <br>
+\vspace{2mm}
 
-Jones, C. S., Thomas, F. M., Michael, D. R., Fraser, H., **Gould, E.**, Begley, J., Wilson, J., Vesk, P. A., & Rumpff, L. (2023). What state of the world are we in? Targeted monitoring to detect transitions in vegetation restoration projects. Ecological Applications, 33(1), e2728. [doi.org/10.1002/eap.2728](https://doi.org/10.1002/eap.2728) <br>
+Ivimey, E. R., Pick, J. L., Bairos, K. R., Culina, A., **Gould, E.**, Grainger, M., Marshall, B. M., Moreau, D., Paquet, M., Royauté, R., Sánchez, A., Silva, I., & Windecker, S. M. (2023). Implementing code review in the scientific workflow: Insights from ecology and evolutionary biology. Journal of Evolutionary Biology. [doi.org/10.1111/jeb.14230](https://doi.org/10.1111/jeb.14230) 
 
-Fraser, H., Bush, M., Wintle, B. C., Mody, F., Smith, E. T., Hanea, A. M., **Gould, E.**, Hemming, V., Hamilton, D. G., Rumpff, L., Wilkinson, D. P., Pearson, R., Singleton Thorn, F., Ashton, R., Willcox, A., Gray, C. T., Head, A., Ross, M., Groenewegen, R., … Fidler, F. (2023). Predicting reliability through structured expert elicitation with the repliCATS (Collaborative Assessments for Trustworthy Science) process. PLOS ONE, 18(1), e0274429. [doi.org/10.1371/journal.pone.0274429](https://doi.org/10.1371/journal.pone.0274429) <br>
+\vspace{2mm}
 
-O’Dea, R. E., Parker, T. H., Chee, Y. E., Culina, A., Drobniak, S. M., Duncan, D. H., Fidler, F., **Gould, E.**, Ihle, M., Kelly, C. D., Lagisz, M., Roche, D. G., Sánchez-Tójar, A., Wilkinson, D. P., Wintle, B. C., & Nakagawa, S. (2021). Towards open, reliable, and transparent ecology and evolutionary biology. BMC Biology, 19(1). [doi.org/10.1186/s12915-021-01006-3](https://doi.org/10.1186/s12915-021-01006-3) <br>
+Jones, C. S., Thomas, F. M., Michael, D. R., Fraser, H., **Gould, E.**, Begley, J., Wilson, J., Vesk, P. A., & Rumpff, L. (2023). What state of the world are we in? Targeted monitoring to detect transitions in vegetation restoration projects. Ecological Applications, 33(1), e2728. [doi.org/10.1002/eap.2728](https://doi.org/10.1002/eap.2728) 
 
-Hanea, A. M., Wilkinson, D. P., McBride, M., Lyon, A., Van Ravenzwaaij, D., Singleton Thorn, F., Gray, C., Mandel, D. R., Willcox, A., **Gould, E.**, Smith, E. T., Mody, F., Bush, M., Fidler, F., Fraser, H., & Wintle, B. C. (2021). Mathematically aggregating experts’ predictions of possible futures. PLOS ONE, 16(9), e0256919. [doi.org/10.1371/journal.pone.0256919](https://doi.org/10.1371/journal.pone.0256919) <br>
+\vspace{2mm}
 
-Good, M., Fraser, H., **Gould, E.**, Vesk, P., Rumpff, L., 2021. A practical guide for conservation planning using the General Ecosystem Model for Southern Australian Woodlands. NESP Threatened Sprecies Recovery Hub Project 7.2, Brisbane. <br>
+Fraser, H., Bush, M., Wintle, B. C., Mody, F., Smith, E. T., Hanea, A. M., **Gould, E.**, Hemming, V., Hamilton, D. G., Rumpff, L., Wilkinson, D. P., Pearson, R., Singleton Thorn, F., Ashton, R., Willcox, A., Gray, C. T., Head, A., Ross, M., Groenewegen, R., … Fidler, F. (2023). Predicting reliability through structured expert elicitation with the repliCATS (Collaborative Assessments for Trustworthy Science) process. PLOS ONE, 18(1), e0274429. [doi.org/10.1371/journal.pone.0274429](https://doi.org/10.1371/journal.pone.0274429) 
+
+\vspace{2mm}
+
+O’Dea, R. E., Parker, T. H., Chee, Y. E., Culina, A., Drobniak, S. M., Duncan, D. H., Fidler, F., **Gould, E.**, Ihle, M., Kelly, C. D., Lagisz, M., Roche, D. G., Sánchez-Tójar, A., Wilkinson, D. P., Wintle, B. C., & Nakagawa, S. (2021). Towards open, reliable, and transparent ecology and evolutionary biology. BMC Biology, 19(1). [doi.org/10.1186/s12915-021-01006-3](https://doi.org/10.1186/s12915-021-01006-3) 
+
+\vspace{2mm}
+
+Hanea, A. M., Wilkinson, D. P., McBride, M., Lyon, A., Van Ravenzwaaij, D., Singleton Thorn, F., Gray, C., Mandel, D. R., Willcox, A., **Gould, E.**, Smith, E. T., Mody, F., Bush, M., Fidler, F., Fraser, H., & Wintle, B. C. (2021). Mathematically aggregating experts’ predictions of possible futures. PLOS ONE, 16(9), e0256919. [doi.org/10.1371/journal.pone.0256919](https://doi.org/10.1371/journal.pone.0256919)
+
+\vspace{2mm}
+
+Good, M., Fraser, H., **Gould, E.**, Vesk, P., Rumpff, L., 2021. A practical guide for conservation planning using the General Ecosystem Model for Southern Australian Woodlands. NESP Threatened Sprecies Recovery Hub Project 7.2, Brisbane. 
