update cover letter colours and header entries

--- a/quarto-CV/template-cover-letter.qmd
+++ b/quarto-CV/template-cover-letter.qmd
@@ -1,46 +1,37 @@
 ---
 format:
   modern2-cover-letter-pdf: default
-author: David Schoch
+author: Elliot Gould
 date: today
 date-format: long
 
+
 cvfont: raleway #texlive fonts like raleway,fetamont,gillius,comfortaa
 cvcolor: 
-  main: B83B5E
-  accent: 6A2C70
+  main: "005487"
+  accent: "385438"
   
-title: Motivation letter
-sub-title: 'Application as Team Lead "Transparent Social Analytics"'
+title: Cover Letter
+sub-title: 'Application as "Future Fire Analyst"'
 
 contact:
-  street: First Street 1
-  zip: 1234
-  city: Some City
-  phone: +1 2345 6789
-  mail: some.mail@mailbox.com
+  street: 12 St Johns Court
+  zip: "Reservoir, 3073"
+  phone: "+61 406 680 382"
+  mail: elliot.gould@unimelb.edu.au
   
 organization: 
-  contact-person: Big Boss
-  name: Important Corporation
-  street: Second Street 2
-  zip: 1234 
-  city: Some City
+  contact-person: Hamish Clarke
+  department: School of Agriculture, Food and Ecosystem Sciences
+  faculty: Faculty of Science
+  institution: University of Melbourne
+  mail: hamish.clarke@unimelb.edu.au
+  
     
 ---
 
-Dear big boss,
+Dear Hamish,
 
-This is my first paragraph.
-I'm super interested in the job.
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 
 Kind regards,
-
-David
+Elliot.
